# ungula-loadcell

./: .gitignore  API.md  LICENSE  README.md  library.properties
src/: ungula_loadcell.h
src/loadcell/: force_convert.h  i_adc24.h  load_cell.cpp  load_cell.h  tension_sensor.cpp  tension_sensor.h
src/loadcell/drivers/: ads1220.cpp  ads1220.h  ads1232.cpp  ads1232.h  hx711.cpp  hx711.h  nau7802.cpp  nau7802.h
src/ungula/: loadcell.h
src/ungula/loadcell/: force_convert.h  i_adc24.h  load_cell.cpp  load_cell.h  tension_sensor.cpp  tension_sensor.h
src/ungula/loadcell/drivers/: ads1220.cpp  ads1220.h  ads1232.cpp  ads1232.h  hx711.cpp  hx711.h  nau7802.cpp  nau7802.h
tests/: 2_run.sh  CMakeLists.txt  mock_adc24.h  test_drivers.cpp  test_force_convert.cpp  test_load_cell.cpp  test_tension_sensor.cpp
tests/ArduinoStub/: system_stub.cpp
